--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 	// Oracle JDBC Driver
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc11:23.4.0.24.05'
 
+	// P6Spy - SQL logging with parameters
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
