--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -1,21 +1,22 @@
-name: PR Validation
+name: PR Validation # 워크 플로우 이름
 
 on:
   pull_request:
-    branches: [ main ]
-    types: [ opened, synchronize, reopened ]
+    branches: [ main ]  # main  브랜치로 pr 보낼 때만 실행
+    types: [ opened, synchronize, reopened ]  # opend : pr을 처음 생성, synchronize : pr에 commit 추가, reopened : 단힌 pr 다시 열림
 
 jobs:
   build-and-test:
     name: Build and Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # GitHub 가 제공하는 리눅스 서버에서 실행한다는 의미
 
+    # GitHub 권한 설정
     permissions:
-      contents: read
-      checks: write
+      contents: read  # 코드 읽기 가능
+      checks: write   # PR에 결과 표시 가능
 
     steps:
-    # 1. 코드 체크아웃 (리포지토리 코드가져오기)
+    # 1. 코드 체크아웃 (리포지토리 코드가져오기) , GitHub repo 코드를 runner 서버로 다운로드 함.
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -26,7 +27,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3. Gradle 캐싱 설정 (빌드 속도 향상)
+      # 3. Gradle 캐싱 설정 (빌드 속도 향상) : 첫 빌드는 느리지만, 이후 빌드는 빨므
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
@@ -46,7 +47,7 @@ jobs:
 
       # 7. 테스트 결과 업로드 (실패해도 결과 확인 가능)
       - name: Upload test results
-        if: always()
+        if: always()  # 테스트가 실패해도 업로드
         uses: actions/upload-artifact@v4
         with:
           name: test-results
