--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -37,3 +37,41 @@ jobs:
           name: app-jar
           path: build/libs/*.jar
           retention-days: 1
+
+  # Job 1 이 성공하고 나면, 실행한다.
+  docker-build-and-push:
+    name: Docker Build and Push
+    runs-on: ubuntu-latest
+    needs: build-and-test    # Job 1 성공해야 실행
+
+    permissions:
+      contents: read
+      packages: write        # GHCR push 권한
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-jar
+          path: build/libs/
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }} # 워크 플로우를 실행시킨 GitHub 사용자명 (자동 제공)
+          password: ${{ secrets.GITHUB_TOKEN }} # GitHub이 자동으로 발급해주는 임시 토큰, 별도 설정 없이 사용 가능
+
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          # ${{ github.repository }} : 계정명/저장소명 형태로 자동 치환
+          # ${{ github.sha }} : 현재 커밋 해시 , 이미지 버전 추적용
+          tags: |
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
