--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -24,9 +24,10 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
+      # 테스트 실행
       - name: Run tests
-        run: ./gradlew clean test --no-daemon
+        #run: ./gradlew clean test --no-daemon
+        run: ./gradlew test --tests "*" --stacktrace
 
       - name: Build JAR
         run: ./gradlew build -x test --no-daemon
